{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 19,
  "lineage": "e7362a16-5bf0-7efd-0fc5-4d5d81b24c76",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:038462748868:instance/i-098f5d40d8dad576c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098f5d40d8dad576c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_module",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05711d7369ed9b043"
              }
            ],
            "primary_network_interface_id": "eni-05711d7369ed9b043",
            "private_dns": "ip-10-0-1-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.233",
            "public_dns": "ec2-3-95-159-67.compute-1.amazonaws.com",
            "public_ip": "3.95.159.67",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-094eab41021212e39",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad87f97643b12da4",
            "tags": {
              "Name": "demo_instance"
            },
            "tags_all": {
              "Name": "demo_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9a73fbcc3e5ca05"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462748868",
            "id": "i-098f5d40d8dad576c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_key_pair.instance_key",
            "module.ec2_instance.tls_private_key.rsa_key",
            "module.terraform_vpc.aws_subnet.public",
            "module.terraform_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.terraform_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d1d4d29a0736e00",
            "arn": "arn:aws:ec2:us-east-1:038462748868:elastic-ip/eipalloc-05d1d4d29a0736e00",
            "association_id": "eipassoc-0660ee3607ad80e55",
            "domain": "vpc",
            "id": "eipalloc-05d1d4d29a0736e00",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07c7a628718de1efa",
            "private_dns": "ip-10-0-1-199.ec2.internal",
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-34-202-200-234.compute-1.amazonaws.com",
            "public_ip": "34.202.200.234",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.terraform_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.terraform_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462748868:internet-gateway/igw-0f1b36f11dd8db9d2",
            "id": "igw-0f1b36f11dd8db9d2",
            "owner_id": "038462748868",
            "region": "us-east-1",
            "tags": {
              "Name": "demo_project-igw"
            },
            "tags_all": {
              "Name": "demo_project-igw"
            },
            "vpc_id": "vpc-00e5a1fff29636cb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.terraform_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.terraform_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d1d4d29a0736e00",
            "association_id": "eipassoc-0660ee3607ad80e55",
            "connectivity_type": "public",
            "id": "nat-0cac72fca156139b8",
            "network_interface_id": "eni-07c7a628718de1efa",
            "private_ip": "10.0.1.199",
            "public_ip": "34.202.200.234",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ad87f97643b12da4",
            "tags": {
              "Name": "demo_project-nat-gateway"
            },
            "tags_all": {
              "Name": "demo_project-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.terraform_vpc.aws_eip.nat_eip",
            "module.terraform_vpc.aws_internet_gateway.igw",
            "module.terraform_vpc.aws_subnet.public",
            "module.terraform_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.terraform_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462748868:route-table/rtb-064a58895683e16bf",
            "id": "rtb-064a58895683e16bf",
            "owner_id": "038462748868",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cac72fca156139b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_project-private-rt"
            },
            "tags_all": {
              "Name": "demo_project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e5a1fff29636cb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462748868",
            "id": "rtb-064a58895683e16bf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.terraform_vpc.aws_eip.nat_eip",
            "module.terraform_vpc.aws_internet_gateway.igw",
            "module.terraform_vpc.aws_nat_gateway.nat",
            "module.terraform_vpc.aws_subnet.public",
            "module.terraform_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.terraform_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462748868:route-table/rtb-024c8973619113fbc",
            "id": "rtb-024c8973619113fbc",
            "owner_id": "038462748868",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1b36f11dd8db9d2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_project-public-rt"
            },
            "tags_all": {
              "Name": "demo_project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e5a1fff29636cb1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462748868",
            "id": "rtb-024c8973619113fbc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.terraform_vpc.aws_internet_gateway.igw",
            "module.terraform_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-assoc",
      "provider": "module.terraform_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3d72f0402708411",
            "region": "us-east-1",
            "route_table_id": "rtb-064a58895683e16bf",
            "subnet_id": "subnet-07085e200f3396e01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.terraform_vpc.aws_eip.nat_eip",
            "module.terraform_vpc.aws_internet_gateway.igw",
            "module.terraform_vpc.aws_nat_gateway.nat",
            "module.terraform_vpc.aws_route_table.private",
            "module.terraform_vpc.aws_subnet.private",
            "module.terraform_vpc.aws_subnet.public",
            "module.terraform_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-assoc",
      "provider": "module.terraform_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051377947d3deab66",
            "region": "us-east-1",
            "route_table_id": "rtb-024c8973619113fbc",
            "subnet_id": "subnet-0ad87f97643b12da4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.terraform_vpc.aws_internet_gateway.igw",
            "module.terraform_vpc.aws_route_table.public",
            "module.terraform_vpc.aws_subnet.public",
            "module.terraform_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.terraform_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462748868:subnet/subnet-07085e200f3396e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07085e200f3396e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038462748868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo_project-priv-subnet"
            },
            "tags_all": {
              "Name": "demo_project-priv-subnet"
            },
            "vpc_id": "vpc-00e5a1fff29636cb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462748868",
            "id": "subnet-07085e200f3396e01",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.terraform_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.terraform_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462748868:subnet/subnet-0ad87f97643b12da4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad87f97643b12da4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038462748868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo_project-pub-subnet"
            },
            "tags_all": {
              "Name": "demo_project-pub-subnet"
            },
            "vpc_id": "vpc-00e5a1fff29636cb1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462748868",
            "id": "subnet-0ad87f97643b12da4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.terraform_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.terraform_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.terraform_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462748868:vpc/vpc-00e5a1fff29636cb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0147fbd6dbb56db81",
            "default_route_table_id": "rtb-0fe62ab2a58fab36b",
            "default_security_group_id": "sg-0e9a73fbcc3e5ca05",
            "dhcp_options_id": "dopt-03e91d218a81481d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e5a1fff29636cb1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe62ab2a58fab36b",
            "owner_id": "038462748868",
            "region": "us-east-1",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "038462748868",
            "id": "vpc-00e5a1fff29636cb1",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}